[package]
name = "faur"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
homepage = "https://git.sr.ht/~fosskers/faur"
repository = "https://git.sr.ht/~fosskers/faur"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
warp = "0.3"

[profile.release]
lto = true
strip = true
