[package]
name = "faur"
version = "0.1.1"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
homepage = "https://git.sr.ht/~fosskers/faur"
repository = "https://git.sr.ht/~fosskers/faur"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
from_variants = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
simplelog = "0.12"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3", features = ["tls"] }

[profile.release]
lto = true
strip = true
